change Flux actions